Kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: snappy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-container
  template:
    metadata:
      labels:
        app: backend-container
    spec:
      containers:
        - name: backend
          image: subhabrata3002/snappy-server-repo:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"

      automountServiceAccountToken: false
