Kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snappy-ingress
  namespace: snappy
  annotations:
    kubernetes.io/ingress.class: nginx  # Specify the IngressClass name
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/websocket-services: backend-service
spec:
  defaultBackend:
    service:
      name: default-http-backend
      port:
        number: 80
  rules:
    - host: ec2-44-210-133-220.compute-1.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
          - path: /socket.io
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
          - path: /chat
            pathType: Prefix
            backend:
              service:
                name: mongodb-service
                port:
                  number: 27017
